--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "time-input",
   "version": "1.3.1",
   "description": "A keyboard friendly react component for capturing time",
-  "main": "./dist/TimeInput",
+  "main": "./lib/TimeInput",
   "scripts": {
     "test": "NODE_ENV=test karma start --single-run && node_modules/.bin/standard",
     "start": "node demo/server.js",
